index.html add date

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-<h1>Строка Эдема.</h1>
+<h1>Строка Эдема. 05102022</h1>
 $$$$$$$$$$$$$$$$$
 </body>
 </html>
